data validation completed

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -11,13 +11,12 @@ data_ingestion_config:
   ingested_test_dir: test 
 
 
-
-
 data_validation_config:
-  schema_dir: config
-  schema_file_name: schema.yaml
-  report_file_name: report.json
+  schema_dir: config #location of schema dir file 
+  schema_file_name: schema.yaml 
+  report_file_name: report.json 
   report_page_file_name: report.html
+  data_drift_check_old_period : 5
 
 data_transformation_config:
   transformed_dir: transformed_data
