--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -1,3 +1,5 @@
 option_settings:
-    "aws:elasticbeanstalk:container:python":
-        WSGIPath:application:application
+  aws:elasticbeanstalk:environment:
+    EnvironmentType: SingleInstance
+  aws:elasticbeanstalk:container:python:
+    WSGIPath: application.py
