--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -1,6 +1,3 @@
-       
 option_settings:
-  aws:elasticbeanstalk:environment:
-    EnvironmentType: SingleInstance
   aws:elasticbeanstalk:container:python:
-    WSGIPath: application.py
+    WSGIPath:application:application
