--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,15 +22,15 @@ classifiers = [
 
 
 dependencies = [
-    "dill=0.3.6",
-    "evidently=0.3.3",
-    "Flask=2.3.2",
-    "gunicorn=20.1.0",
-    "numba=0.57.1",
-    "numpy=1.25.1",
-    "pandas=2.0.3",
-    "PyYAML=6.0",
-    "requests=2.31.0",
-    "scikit-learn=1.3.0",
-    "urllib3=2.0.3",
-    "xlrd=2.0.1", ]
+    "dill",
+    "evidently",
+    "Flask",
+    "gunicorn",
+    "numba",
+    "numpy",
+    "pandas",
+    "PyYAML",
+    "requests",
+    "scikit-learn",
+    "urllib3",
+    "xlrd"]
